<resources>
    <string name="app_name">Augnote</string>
    <string name="tag_line">Make Better Handwritten Notes</string>

    <string name="open_file">Open File</string>
    <string name="cant_access_file">Can\'t access File. Maybe deleted.</string>

    <string name="new_folder">New Folder</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="no_name_given">No name given</string>

    <string name="no_select">Give something to link to</string>

    <string name="tag_name">Tag Name</string>
    <string name="select_file">Select File</string>
    <string name="file_selected">File Selected</string>
    <string name="new_tag">New Tag</string>
    <string name="tag_type">Tag Type</string>
    <string name="tag_type_url">URL</string>
    <string name="tag_type_file">File</string>

    <string name="search">Search</string>
    <string name="scan">Scan</string>
    <string name="add_folder">Add Folder</string>
    <string name="add_tag">Add Tag</string>
    <string name="icon">Icon</string>

    <string name="folder_name">Folder Name</string>
    <string name="name">Name</string>
    <string name="enter_a_url">Enter a URL</string>

    <string name="choose_theme">Choose Theme</string>
    <string name="light_theme_option_string">Light Theme</string>
    <string name="dark_theme_option_string">Dark Theme</string>
    <string name="system_theme_option_string">Follow System</string>

    <string name="options">Options</string>
    <string name="edit">Edit Name</string>
    <string name="delete">Delete</string>

    <string name="change_theme">Theme</string>
    <string name="about">About</string>
    <string name="go_pro">Go Pro</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>

    <string name="no_result">No Results</string>
    <string name="no_content">Empty Folder</string>

    <string name="contact">Contact Developer</string>
    <string name="send_email">Send Email</string>

    <string name="not_init">Billing not ready. Please try again later</string>
    <string name="try_again">Something went wrong. Please try again later</string>
    <string name="purchase_success">Premium Unlocked</string>

    <string name="instructions_title">Instructions</string>
    <string name="instructions_body">I made a small video to show how to use this app. Please watch it, it\'s only a minute long.\n\n(Also long press a tag or folder to change it\'s name and delete it)</string>
    <string name="watch_video">Watch Video</string>
    <string name="dismiss">Dismiss</string>

</resources>