<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="22dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp">

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag_name"
        android:textColor="?attr/colorAccent"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/relationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tag_name"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag_type"
        android:textColor="?attr/colorAccent"
        android:textSize="20sp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkedChip="@id/chip_type_file"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_type_file"
            style="@style/AugnoteChoiceChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_type_file" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_type_url"
            style="@style/AugnoteChoiceChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_type_url" />

    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/selectFileButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/select_file"
        android:textColor="?attr/colorAccent" />

    <EditText
        android:id="@+id/input_url_uri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_url"
        android:importantForAutofill="no"
        android:inputType="textUri|text"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>