<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/light_theme_option"
        style="@style/SmallTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp"
        android:text="@string/light_theme_option_string" />

    <View style="@style/Divider" />

    <TextView
        android:id="@+id/dark_theme_option"
        style="@style/SmallTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp"
        android:text="@string/dark_theme_option_string" />

    <View style="@style/Divider" />

    <TextView
        android:id="@+id/system_theme_option"
        style="@style/SmallTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp"
        android:text="@string/system_theme_option_string" />
</LinearLayout>